bg image and alignment

--- a/Online-Photobooth-master/start.html
+++ b/Online-Photobooth-master/start.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+	<img src="images/curtain.png" id="curtain">
 	<section id="cameraContentarea">
 		<h1>
 			Smile for the Camera
