fabric.js added

--- a/Online-Photobooth-master/start.html
+++ b/Online-Photobooth-master/start.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<meta charset='utf-8'>
 	<link rel="stylesheet" href="main.css" type="text/css" media="screen">
-	<script src="fabric.min.js" charset="utf-8"></script>
+	<script src="fabric.js" charset="utf-8"></script>
 
 </head>
 
