final changes -layer buttons -color buttons -center items

--- a/Online-Photobooth-master/start.html
+++ b/Online-Photobooth-master/start.html
@@ -14,7 +14,7 @@
 	<img src="images/curtain.png" id="curtain">
 	<section id="cameraContentarea">
 		<h1>
-			Smile for the Camera
+			Smile! 😁
 		</h1>
 		<p id='fred2'>
 			Take the picture to be used for the image mashup.
@@ -31,7 +31,7 @@
 			<img id="photo" alt="The screen capture will appear in this box.">
 		</div>
 
-		<p id='fred'>When you are happy with your picture, <button id="startMixingButton">Start Mixing</button>
+		<p id='fred'>Start mixing when you are happy with your picture, <button id="startMixingButton">Start Mixing</button>
 	</section>
 
 	<section id="canvasMixArea">
@@ -43,7 +43,8 @@
 		<img src="images/BreadBuddy.png" id="BreadBuddy" alt="" width="100px">
 		<img src="images/CatEyes.png" id="CatEyes" alt="" width="100px">
 		<p><a id="downloadButton" download="" href="">SAVE IMAGE</a><button id="returnButton">New Photo</button></p>
-
+<button id = "backButton">Layer Back ▼</button>
+<button id = "forwardButton">Layer Forward ▲ </button>
 	</section>
 	<script src="cameraCollage.js">
 	</script>
