--- a/Online-Photobooth-master/start.html
+++ b/Online-Photobooth-master/start.html
@@ -44,6 +44,7 @@
 		<img src="images/6.png" id="6" alt="" width="100px">
 		<img src="images/7.png" id="7" alt="" width="100px">
 		<img src="images/8.png" id="8" alt="" width="100px">
+		<img src="images/9.png" id="9" alt="" width="100px">
 		<p><a id="downloadButton" download="" href="">SAVE IMAGE</a><button id="returnButton">New Photo</button></p>
 <button id = "backButton">Layer Back ▼</button>
 <button id = "forwardButton">Layer Forward ▲ </button>
