--- a/Online-Photobooth-master/start.html
+++ b/Online-Photobooth-master/start.html
@@ -36,15 +36,15 @@
 
 	<section id="canvasMixArea">
 		<canvas id="c" width="800" height="600"></canvas>
-		<img src="images/1.png" id="1" alt="" width="100px">
-		<img src="images/2.png" id="2" alt="" width="100px">
-		<img src="images/3.png" id="3" alt="" width="100px">
-		<img src="images/4.png" id="4" alt="" width="100px">
-		<img src="images/5.png" id="5" alt="" width="100px">
-		<img src="images/6.png" id="6" alt="" width="100px">
-		<img src="images/7.png" id="7" alt="" width="100px">
-		<img src="images/8.png" id="8" alt="" width="100px">
-		<img src="images/9.png" id="9" alt="" width="100px">
+		<img src="images/1.png" id="p1" alt="" width="100px">
+		<img src="images/2.png" id="p2" alt="" width="100px">
+		<img src="images/3.png" id="p3" alt="" width="100px">
+		<img src="images/4.png" id="p4" alt="" width="100px">
+		<img src="images/5.png" id="p5" alt="" width="100px">
+		<img src="images/6.png" id="p6" alt="" width="100px">
+		<img src="images/7.png" id="p7" alt="" width="100px">
+		<img src="images/8.png" id="p8" alt="" width="100px">
+		<img src="images/9.png" id="p9" alt="" width="100px">
 		<p><a id="downloadButton" download="" href="">SAVE IMAGE</a><button id="returnButton">New Photo</button></p>
 <button id = "backButton">Layer Back ▼</button>
 <button id = "forwardButton">Layer Forward ▲ </button>
