--- a/Online-Photobooth-master/start.html
+++ b/Online-Photobooth-master/start.html
@@ -35,7 +35,7 @@
 	</section>
 
 	<section id="canvasMixArea">
-		<canvas id="c" width="800" height="600"></canvas>
+		<canvas id="c" width="100%" height="600"></canvas>
 		<img src="images/1.png" id="p1" alt="" width="100px">
 		<img src="images/2.png" id="p2" alt="" width="100px">
 		<img src="images/3.png" id="p3" alt="" width="100px">
