--- a/Online-Photobooth-master/start.html
+++ b/Online-Photobooth-master/start.html
@@ -35,7 +35,7 @@
 	</section>
 
 	<section id="canvasMixArea">
-		<canvas id="c" width="100%" height="600"></canvas>
+		<canvas id="c" width="800" height="600"></canvas>
 		<img src="images/1.png" id="p1" alt="" width="100px">
 		<img src="images/2.png" id="p2" alt="" width="100px">
 		<img src="images/3.png" id="p3" alt="" width="100px">
@@ -44,7 +44,7 @@
 		<img src="images/6.png" id="p6" alt="" width="100px">
 		<img src="images/7.png" id="p7" alt="" width="100px">
 		<img src="images/8.png" id="p8" alt="" width="100px">
-		<img src="images/9.png" id="p9" alt="" width="100px">
+		<img src="images/9.png" id="p9" alt="" width="100px"><br><br>
 		<p><a id="downloadButton" download="" href="">SAVE IMAGE</a><button id="returnButton">New Photo</button></p>
 <button id = "backButton">Layer Back ▼</button>
 <button id = "forwardButton">Layer Forward ▲ </button>
