--- a/Online-Photobooth-master/start.html
+++ b/Online-Photobooth-master/start.html
@@ -14,10 +14,10 @@
 	<img src="images/curtain.png" id="curtain">
 	<section id="cameraContentarea">
 		<h1>
-			Smile! 😁
+			Holiday Photo Booth! Smile & Take Photo😁
 		</h1>
 		<p id='fred2'>
-			Take the picture to be used for the image mashup.
+			Take the picture to be used for the holiday photo.
 		</p>
 		<div class="camera">
 			<video id="video" playsinline>Video stream not available.</video>
@@ -31,7 +31,7 @@
 			<img id="photo" alt="The screen capture will appear in this box.">
 		</div>
 
-		<p id='fred'>Start mixing when you are happy with your picture, <button id="startMixingButton">Start Mixing</button>
+		<p id='fred'>1) Take photo 2) Decorate photo, <button id="startMixingButton">Start Mixing</button>
 	</section>
 
 	<section id="canvasMixArea">
