--- a/Online-Photobooth-master/start.html
+++ b/Online-Photobooth-master/start.html
@@ -31,7 +31,7 @@
 			<img id="photo" alt="The screen capture will appear in this box.">
 		</div>
 
-		<p id='fred'>1) Tap 'Take photo' until happy 2) Tap 'Decorate photo' <button id="startMixingButton">Decorate photo</button>
+		<p id='fred'>1)Take photo until happy! 2)Decorate photo' <button id="startMixingButton">Decorate photo</button>
 	</section>
 
 	<section id="canvasMixArea">
