--- a/Online-Photobooth-master/start.html
+++ b/Online-Photobooth-master/start.html
@@ -14,7 +14,7 @@
 	<img src="images/curtain.png" id="curtain">
 	<section id="cameraContentarea">
 		<h1>
-			Holiday Photo Booth! Smile & Take Photo😁
+			Holiday Photo Booth 😁
 		</h1>
 		<p id='fred2'>
 			Take the picture to be used for the holiday photo.
